[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "trade"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
]

# src/ layout — wheel includes these top-level packages
[tool.hatch.build.targets.wheel]
packages = ["src/binance_tool", "src/break", "src/collect_data"]
